@@ -116,4 +116,11 @@ RUN groupadd -g 1001 javaapp && \
 RUN chown -R javaapp:javaapp /app
 
 USER javaapp:javaapp
+
+#
+# In K8s, use environment vars like this:
+# JDK_JAVA_OPTIONS=--enable-preview --add-opens=java.base/java.nio=ALL-UNNAMED
+# or
+# JAVA_TOOL_OPTIONS=--enable-preview --add-opens=java.base/java.nio=ALL-UNNAMED
+#
 CMD ["$HOME/.sdkman/candidates/java/current/bin/java", "-jar", "app.jar"]
